changed navbar to under construction

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
         <h1 id="main-title">turbo arena deathball.</h1>
         <div id="navlist">
             <ul>
-                <li><h2>media</h2></li>
-                <li><h2>news</h2></li>
-                <li><h2>contact</h2></li>
+                <li><h2>under construction</h2></li>
+                <!--
+    <li><h2>media</h2></li>
+    <li><h2>news</h2></li>
+    <li><h2>contact</h2></li>-->
             </ul>
         </div>
     </div>
