added about page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <h1 id="main-title">turbo arena deathball.</h1>
         <div id="navlist">
             <ul>
-                <li><h2>under construction</h2></li>
+                <li><a href="./index.html"><h2 style="text-decoration: underline">under construction</h2></a></li>
+                <li><a href="./about.html"><h2>about</h2></a></li>
                 <!--
     <li><h2>media</h2></li>
     <li><h2>news</h2></li>
@@ -25,7 +26,7 @@
     </div>
     <!--END TITLE BAR-->
 
-    <img src="./UnderConstruction.png" style="margin-bottom: 10px"/>
+    <img src="./UnderConstruction.png" class="max-full"/>
 
     <!--
     <video width="1920" height="1080" autoplay muted controls loop>// style="max-width: 80%; display: block; margin: 0 auto; padding-top: 100px;">
