changed preload for videos to auto

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                     <li><p class="feature-subtext">Get ready for the return of blistering movement speeds and ridiculously high jumps.</p></li>
                    <!-- <li><img src="./TADScreenshotTemp.png" width="720" height="460" class="feature-image, right" /></li> -->
                     <li>
-                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop preload="auto">
                             <source src="./TADTeaser.mp4" type="video/mp4">
                         </video>
                     </li>
@@ -49,7 +49,7 @@
                     <li><p class="feature-subtext">Easy to understand, hard to master: shoot the ball into the enemy team's goal with rockets!</p></li>
                     <!--<li><img src="./TADScreenshotTemp.png" width="720" height="460" class="feature-image, right" /></li>-->
                     <li>
-                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop preload="auto">
                             <source src="./TADRoundsWebClip.mp4" type="video/mp4">
                         </video>
                     </li>
@@ -59,7 +59,7 @@
                     <li><p class="feature-subtext">turbo arena deathball is best served with pizza, friends, and trash talk.</p></li>
                     <!--<li><img src="./TADScreenshotTemp.png" width="720" height="460" class="feature-image, right" /></li>-->
                     <li>
-                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop preload="auto">
                             <source src="./TADSplitscreenWebClip.mp4" type="video/mp4">
                         </video>
                     </li>
@@ -69,7 +69,7 @@
                     <li><p class="feature-subtext">Bet your rewards against your rivals to win more!</p></li>
                     <!--<li><img src="./TADScreenshotTemp.png" width="720" height="460" class="feature-image, right" /></li>-->
                     <li>
-                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop preload="auto">
                             <source src="./TADTauntWebClip.mp4" type="video/mp4">
                         </video>
                     </li>
