--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, max-scale=1.0, user-scaleable=no">
     <title>turbo arena deathball.</title>
     <link href="./TADStyleSheet.css" type="text/css" rel="stylesheet" />
 </head>
