--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                 <ul class="feature-list-entry" style="list-style-type:none">
                     <li><h3>Experience <strong>velocity</strong> you haven't felt in an fps since <strong>1999.</strong></h3></li>
                     <li><p class="feature-subtext">Get ready for the return of blistering movement speeds and ridiculously high jumps.</p></li>
-                    <li><img src="./TADTeaser.gif" class="feature-image, right" /></li>
+                    <li><img src="./TADTeaser.gif" class="feature-image" /></li>
                     <!-- <li>
          <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
              <source src="./TADTeaser.mp4" type="video/mp4">
@@ -47,7 +47,7 @@
                 <ul class="feature-list-entry" style="list-style-type:none">
                     <li><h3>Three rounds. Two teams. One ball. (or more!)</h3></li>
                     <li><p class="feature-subtext">Easy to understand, hard to master: shoot the ball into the enemy team's goal with rockets!</p></li>
-                    <li><img src="./TADRoundsWebClip.gif" class="feature-image, right" /></li>
+                    <li><img src="./TADRoundsWebClip.gif" class="feature-image" /></li>
                     <!-- <li>
          <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
              <source src="./TADRoundsWebClip.mp4" type="video/mp4">
@@ -57,7 +57,7 @@
                 <ul class="feature-list-entry" style="list-style-type:none">
                     <li><h3>Bringing back <strong>split screen.</strong></h3></li>
                     <li><p class="feature-subtext">turbo arena deathball is best served with pizza, friends, and trash talk.</p></li>
-                    <li><img src="./TADSplitscreenWebClip.gif" class="feature-image, right" /></li>
+                    <li><img src="./TADSplitscreenWebClip.gif" class="feature-image" /></li>
                     <!--<li>
         <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
             <source src="./TADSplitscreenWebClip.mp4" type="video/mp4">
@@ -67,7 +67,7 @@
                 <ul class="feature-list-entry" style="list-style-type:none">
                     <li><h3>Win some skins, lose some skins.</h3></li>
                     <li><p class="feature-subtext">Bet your rewards against your rivals to win more!</p></li>
-                    <li><img src="./TADTauntWebClip.gif" class="feature-image, right" /></li>
+                    <li><img src="./TADTauntWebClip.gif" class="feature-image" /></li>
                     <!--<li>
         <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
             <source src="./TADTauntWebClip.mp4" type="video/mp4">
