--- a/index.html
+++ b/index.html
@@ -15,24 +15,77 @@
         <h1 id="main-title">turbo arena deathball.</h1>
         <div id="navlist">
             <ul>
-                <li><a href="./index.html"><h2 style="text-decoration: underline">under construction</h2></a></li>
-                <li><a href="./about.html"><h2>about</h2></a></li>
+                <!--<li><a href="./index.html"><h2>under construction</h2></a></li>-->
+                <li><h2>under construction.</h2></li>
+                <li><a href="./index.html"><h2 style="text-decoration: underline">about</h2></a></li>
+                <li><a href="./contact.html"><h2>contact</h2></a></li>
                 <!--
-    <li><h2>media</h2></li>
-    <li><h2>news</h2></li>
-    <li><h2>contact</h2></li>-->
+                <li><h2>media</h2></li>
+                <li><h2>news</h2></li>
+                <li><h2>contact</h2></li>-->
             </ul>
         </div>
     </div>
     <!--END TITLE BAR-->
 
-    <img src="./UnderConstruction.png" class="max-full"/>
 
-    <!--
-    <video width="1920" height="1080" autoplay muted controls loop>// style="max-width: 80%; display: block; margin: 0 auto; padding-top: 100px;">
-        <source src="./TADTrailerTemp.mp4" type="video/mp4">
-        Your browser does not support HTML video.
-    </video>-->
-    
+    <!--FEATURE LIST-->
+    <div class="main-body, TADWhite">
+        <h2 class="center">
+            <strong>turbo arena deathball</strong> is a fast-paced, multiplayer fps sports game.
+        </h2>
+        <ul class="feature-list" style="list-style-type:none">
+            <li>
+                <ul class="feature-list-entry" style="list-style-type:none">
+                    <li><h3>Experience <strong>velocity</strong> you haven't felt in an fps since <strong>1999.</strong></h3></li>
+                    <li><p class="feature-subtext">Get ready for the return of blistering movement speeds and ridiculously high jumps.</p></li>
+                    <li><img src="./TADTeaser.gif" class="feature-image" /></li>
+                    <!-- <li>
+         <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+             <source src="./TADTeaser.mp4" type="video/mp4">
+         </video>
+     </li>-->
+                </ul>
+                <ul class="feature-list-entry" style="list-style-type:none">
+                    <li><h3>Three rounds. Two teams. One ball. (or more!)</h3></li>
+                    <li><p class="feature-subtext">Easy to understand, hard to master: shoot the ball into the enemy team's goal with rockets!</p></li>
+                    <li><img src="./TADRoundsWebClip.gif" class="feature-image" /></li>
+                    <!-- <li>
+         <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+             <source src="./TADRoundsWebClip.mp4" type="video/mp4">
+         </video>
+     </li>-->
+                </ul>
+                <ul class="feature-list-entry" style="list-style-type:none">
+                    <li><h3>Bringing back <strong>split screen.</strong></h3></li>
+                    <li><p class="feature-subtext">turbo arena deathball is best served with pizza, friends, and trash talk.</p></li>
+                    <li><img src="./TADSplitscreenWebClip.gif" class="feature-image" /></li>
+                    <!--<li>
+        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+            <source src="./TADSplitscreenWebClip.mp4" type="video/mp4">
+        </video>
+    </li>-->
+                </ul>
+                <ul class="feature-list-entry" style="list-style-type:none">
+                    <li><h3>Win some skins, lose some skins.</h3></li>
+                    <li><p class="feature-subtext">Bet your rewards against your rivals to win more!</p></li>
+                    <li><img src="./TADTauntWebClip.gif" class="feature-image" /></li>
+                    <!--<li>
+        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+            <source src="./TADTauntWebClip.mp4" type="video/mp4">
+        </video>
+    </li>-->
+                </ul>
+            </li>
+        </ul>
+    </div>
+    <!--END FEATURE LIST-->
+
+    <div class="feature-gallery, right">
+        <ul class="feature-gallery-list" style="list-style-type:none">
+
+        </ul>
+    </div>
+
 </body>
 </html>
