improved responsiveness and added "under construction" image to bottom of each page.

--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
         <div id="navlist">
             <ul>
                 <!--<li><a href="./index.html"><h2>under construction</h2></a></li>-->
-                <li><h3>under construction.</h3></li>
+                <!--<li><h3>under construction.</h3></li>-->
                 <li><a href="./index.html"><h2>about</h2></a></li>
                 <li><a href="./contact.html"><h2 style="text-decoration: underline">contact</h2></a></li>
                 <!--
@@ -31,7 +31,9 @@
     <div class="main-body, center">
         <h2 class="TADWhite" style="text-align: center">Want to get in touch or find out more? Shoot an email our way at csimms@the-virtual-couch.com.</h2>
     </div>
-  
+
+    <img src="./UnderConstruction.png" class="max-full" id="under-construction-image" />
+
 
 </body>
 </html>
