--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="navlist">
             <ul>
                 <!--<li><a href="./index.html"><h2>under construction</h2></a></li>-->
-                <li><h2>under construction.</h2></li>
+                <!--<li><h2>under construction.</h2></li>-->
                 <li><a href="./index.html"><h2 style="text-decoration: underline">about</h2></a></li>
                 <li><a href="./contact.html"><h2>contact</h2></a></li>
                 <!--
@@ -27,8 +27,6 @@
         </div>
     </div>
     <!--END TITLE BAR-->
-
-
     <!--FEATURE LIST-->
     <div class="main-body, TADWhite">
         <h2 class="center">
@@ -41,51 +39,52 @@
                     <li><p class="feature-subtext">Get ready for the return of blistering movement speeds and ridiculously high jumps.</p></li>
                     <li><img src="./TADTeaser.gif" class="feature-image" /></li>
                     <!-- <li>
-         <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
-             <source src="./TADTeaser.mp4" type="video/mp4">
-         </video>
-     </li>-->
+                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+                            <source src="./TADTeaser.mp4" type="video/mp4">
+                        </video>
+                    </li>-->
                 </ul>
                 <ul class="feature-list-entry" style="list-style-type:none">
                     <li><h3>Three rounds. Two teams. One ball. (or more!)</h3></li>
                     <li><p class="feature-subtext">Easy to understand, hard to master: shoot the ball into the enemy team's goal with rockets!</p></li>
                     <li><img src="./TADRoundsWebClip.gif" class="feature-image" /></li>
                     <!-- <li>
-         <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
-             <source src="./TADRoundsWebClip.mp4" type="video/mp4">
-         </video>
-     </li>-->
+                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+                            <source src="./TADRoundsWebClip.mp4" type="video/mp4">
+                        </video>
+                    </li>-->
                 </ul>
                 <ul class="feature-list-entry" style="list-style-type:none">
                     <li><h3>Bringing back <strong>split screen.</strong></h3></li>
                     <li><p class="feature-subtext">turbo arena deathball is best served with pizza, friends, and trash talk.</p></li>
                     <li><img src="./TADSplitscreenWebClip.gif" class="feature-image" /></li>
                     <!--<li>
-        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
-            <source src="./TADSplitscreenWebClip.mp4" type="video/mp4">
-        </video>
-    </li>-->
+                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+                            <source src="./TADSplitscreenWebClip.mp4" type="video/mp4">
+                        </video>
+                    </li>-->
                 </ul>
                 <ul class="feature-list-entry" style="list-style-type:none">
                     <li><h3>Win some skins, lose some skins.</h3></li>
                     <li><p class="feature-subtext">Bet your rewards against your rivals to win more!</p></li>
                     <li><img src="./TADTauntWebClip.gif" class="feature-image" /></li>
                     <!--<li>
-        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
-            <source src="./TADTauntWebClip.mp4" type="video/mp4">
-        </video>
-    </li>-->
+                        <video width="720" height="460" class="feature-image, right" id="feature-video" autoplay muted loop>
+                            <source src="./TADTauntWebClip.mp4" type="video/mp4">
+                        </video>
+                    </li>-->
                 </ul>
             </li>
         </ul>
     </div>
     <!--END FEATURE LIST-->
 
-    <div class="feature-gallery, right">
-        <ul class="feature-gallery-list" style="list-style-type:none">
 
-        </ul>
+    <div class="feature-gallery, right">
+        <ul class="feature-gallery-list" style="list-style-type:none"></ul>
     </div>
+
+    <img src="./UnderConstruction.png" class="max-full" id="under-construction-image" />
 
 </body>
 </html>
