Added T/F/I follow prompt on Contact page and added "check back soon!" on bottom of about page

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,8 @@
     <!--END TITLE BAR-->
 
     <div class="main-body, center">
-        <h2 class="TADWhite" style="text-align: center">Want to get in touch or find out more? Shoot an email our way at csimms@the-virtual-couch.com.</h2>
+        <h2 class="TADWhite" style="text-align: center">want to get in touch or find out more? Shoot an email our way at csimms@the-virtual-couch.com.</h2>
+        <h2 class="TADWhite" style="text-align: center"><br /><br />stay up-to-date on <a href="https://www.twitter.com/turbodeathball" class="TADWhite">twitter</a>, <a href="https://www.facebook.com/turboarenadeathball" class="TADWhite">facebook</a>, and <a href="https://www.instagram.com/turboarenadeathball" class="TADWhite">instagram</a>!</h2>
     </div>
 
     <img src="./UnderConstruction.png" class="max-full" id="under-construction-image" />
