--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <ul class="feature-gallery-list" style="list-style-type:none"></ul>
     </div>
 
+    <h2 class="TADWhite" style="text-align: center"><br /><br /><br />Check back soon for more news and updates!</h2>
+
     <img src="./UnderConstruction.png" class="max-full" id="under-construction-image" />
 
 </body>
