--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
     </div>
 
     <h2 class="TADWhite" style="text-align: center"><br /><br /><br />Check back soon for more news and updates!</h2>
+    <h2 class="TADWhite" style="text-align: center"><br /><br />stay up-to-date on <a href="https://www.twitter.com/turbodeathball" class="TADWhite">twitter</a>, <a href="https://www.facebook.com/turboarenadeathball" class="TADWhite">facebook</a>, and <a href="https://www.instagram.com/turboarenadeathball" class="TADWhite">instagram</a>!</h2>
 
     <img src="./UnderConstruction.png" class="max-full" id="under-construction-image" />
 
